Fix fsize, lspacing, lheigth, zmist-286

--- a/src/scenes/BlogsScene/styles.scss
+++ b/src/scenes/BlogsScene/styles.scss
@@ -70,5 +70,7 @@
     padding: 15px 10px;
 
     font-size: 14px;
+    letter-spacing: 0.03em;
+    line-height: 1.2;
   }
 }
